--- a/src/blocks.03-bootstrap/pagination/__control/pagination__control.scss
+++ b/src/blocks.03-bootstrap/pagination/__control/pagination__control.scss
@@ -4,8 +4,13 @@
   z-index: 1;
   &_prev{
     left: 0;
+    @include border-left-radius($border-radius);
   }
   &_next{
     right: 0;
+    @include border-right-radius($border-radius);
+  }
+  &_disabled{
+    display: none;
   }
 }
