--- a/src/sass-globals/variables.scss
+++ b/src/sass-globals/variables.scss
@@ -1,2 +1,1 @@
-$font-sizes: () !default;
-$zindex: () !default;
+// Теперь переопределенные переменные не должны содержать ключевое слово !default;
