--- a/src/sass-globals/variables.scss
+++ b/src/sass-globals/variables.scss
@@ -1,1 +1,4 @@
+// Теперь переопределенные переменные должны содержать ключевое слово !default;
+@import "../blocks.01-base/fi/variables";
+@import "~bootstrap/scss/variables";
 // Теперь переопределенные переменные не должны содержать ключевое слово !default;
